tests/baselines/reference/nodeModulesPackagePatternExportsExclude(module=node20).errors.txt
index.cts(2,23): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
index.cts(3,23): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
index.cts(4,24): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
index.mts(2,23): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
index.mts(3,23): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
index.mts(4,24): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
index.ts(2,23): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
index.ts(3,23): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
index.ts(4,24): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.cts(2,22): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.cts(3,22): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.cts(4,23): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.mts(2,22): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.mts(3,22): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.mts(4,23): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.ts(2,22): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.ts(3,22): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
node_modules/inner/exclude/index.d.ts(4,23): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
node_modules/inner/index.d.ts(2,13): error TS2303: Circular definition of import alias 'cjs'.


==== index.ts (3 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjsi from "inner/mjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as typei from "inner/js/exclude/index";
                           ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    cjsi;
    mjsi;
    typei;
    import * as cjsi2 from "inner/cjs/index";
    import * as mjsi2 from "inner/mjs/index";
    import * as typei2 from "inner/js/index";
    cjsi2;
    mjsi2;
    typei2;
==== index.mts (3 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjsi from "inner/mjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as typei from "inner/js/exclude/index";
                           ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    cjsi;
    mjsi;
    typei;
    import * as cjsi2 from "inner/cjs/index";
    import * as mjsi2 from "inner/mjs/index";
    import * as typei2 from "inner/js/index";
    cjsi2;
    mjsi2;
    typei2;
==== index.cts (3 errors) ====
    // cjs format file
    import * as cjsi from "inner/cjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjsi from "inner/mjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as typei from "inner/js/exclude/index";
                           ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    cjsi;
    mjsi;
    typei;
    import * as cjsi2 from "inner/cjs/index";
    import * as mjsi2 from "inner/mjs/index";
    import * as typei2 from "inner/js/index";
    cjsi2;
    mjsi2;
    typei2;
==== node_modules/inner/exclude/index.d.ts (3 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjs from "inner/mjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as type from "inner/js/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/exclude/index.d.mts (3 errors) ====
    // esm format file
    import * as cjs from "inner/cjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjs from "inner/mjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as type from "inner/js/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/exclude/index.d.cts (3 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjs from "inner/mjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as type from "inner/js/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.ts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.mts (0 errors) ====
    // esm format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== node_modules/inner/index.d.cts (0 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs/*": "./*.cjs",
            "./cjs/exclude/*": null,
            "./mjs/*": "./*.mjs",
            "./mjs/exclude/*": null,
            "./js/*": "./*.js",
            "./js/exclude/*": null
        }
    } 